RESOLVED FIXED59999
The web process locks up when the plug-in process crashes
https://bugs.webkit.org/show_bug.cgi?id=59999
Summary The web process locks up when the plug-in process crashes
Anders Carlsson
Reported 2011-05-02 18:26:45 PDT
The web process locks up when the plug-in process crashes
Attachments
Patch (6.03 KB, patch)
2011-05-02 18:41 PDT, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2011-05-02 18:41:44 PDT
WebKit Review Bot
Comment 2 2011-05-02 18:45:16 PDT
Attachment 92030 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit2/ChangeLog', u'Source/WebKit..." exit_code: 1 Source/WebKit2/WebProcess/Plugins/PluginProcessConnectionManager.h:41: Code inside a namespace should not be indented. [whitespace/indent] [4] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 3 2011-05-02 18:48:36 PDT
Note You need to log in before you can comment on or make changes to this bug.